--- a/INTRANETDOCENTESLISTADOALUMNOS.html
+++ b/INTRANETDOCENTESLISTADOALUMNOS.html
@@ -196,7 +196,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="INDEX.html">
+              <a class="dropdown-item d-flex align-items-center" href="index.html">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Salir</span>
               </a>
@@ -254,7 +254,7 @@
         </a>
       </li><!-- End Login Page Nav -->
       <li class="nav-item">
-        <a class="nav-link collapsed" href="INDEX.html">
+        <a class="nav-link collapsed" href="index.html">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>SALIR</span>
         </a>
