--- a/REGISTRODOCENTE.html
+++ b/REGISTRODOCENTE.html
@@ -40,7 +40,7 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="INDEX.html" class="logo d-flex align-items-center w-auto">
+                <a href="index.html" class="logo d-flex align-items-center w-auto">
                   <img src="img/logo-saco-oliveros-helicoidal-3.webp" alt="">
                   <span class="d-none d-lg-block"> REGISTRO DOCENTES</span>
                 </a>
